--- a/src/style/services.css
+++ b/src/style/services.css
@@ -95,6 +95,7 @@ body {
 
 .service-text-con p {
   text-align: center;
+  margin-bottom: 50px;
 }
 
 .s-t-con {
